--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <!-- // Intro -->
     <header id="about">
+        <!-- <img class="minion" src="images/minion.png" alt="minion"> -->
         <a href="Resume - Sung, Peter.pdf" class="btn download" download>Download PDF</a>
         <nav>
             <a href="#about">About</a>
@@ -25,7 +26,6 @@
         </nav>
         <div class="content-wrap">
             <img class="profile-img column-narrow" src="images/peter-sung.JPG" alt="Peter Sung">
-
             <div class="column-wide">
                 <h1>Peter Sung</h1>
                 <h2>University of Waterloo Student</h2>
@@ -37,6 +37,7 @@
     <main>
         <!-- // Work Experience -->
         <section id="work" class="work">
+            <div class="ball"></div>
             <h3 class="topic-mobile">Work Experience</h3>
             <h3 class="name-mobile">Peter Sung</h3>
             <div class="content-wrap">
@@ -57,9 +58,9 @@
                     <p>Sept. 2018 - Present</p>
                 </div>
                 <div class="column-wide job-description">
-                    <p>Provides various front-end related services ranging from development work, consultations,
-                        speaking engagements, corporate training, workshops and online courses.</p>
-                    <p>Key contributions:</p>
+                    <!-- <p>Provides various front-end related services ranging from development work, consultations,
+                        speaking engagements, corporate training, workshops and online courses.</p> -->
+                    <!-- <p>Key contributions:</p> -->
                     <ul>
                         <li>Enhanced AIR MILES website and Chatbot for FAQ using Facebook Messenger</li>
                         <li>Used Dialogflow, CSS, HTML, Javascript, ATG, React, Redux, </li>
@@ -72,9 +73,9 @@
                     <p>May 2018 - Aug. 2018</p>
                 </div>
                 <div class="column-wide job-description">
-                    <p>Provides various front-end related services ranging from development work, consultations,
-                        speaking engagements, corporate training, workshops and online courses.</p>
-                    <p>Key contributions:</p>
+                    <!-- <p>Provides various front-end related services ranging from development work, consultations,
+                        speaking engagements, corporate training, workshops and online courses.</p> -->
+                    <!-- <p>Key contributions:</p> -->
                     <ul>
                         <li>Ported a proprietary Windows only client to Linux to allow RHEL customers to interact with
                             the UniPrint universal print solution</li>
@@ -97,10 +98,10 @@
                 </div>
 
                 <div class="column-wide job-description">
-                    <p>Created and managed all adult focused curriculum, instructor training and tech related
-                        strategies and duties.</p>
+                    <!-- <p>Created and managed all adult focused curriculum, instructor training and tech related
+                        strategies and duties.</p> -->
 
-                    <p>Key contributions:</p>
+                    <!-- <p>Key contributions:</p> -->
                     <ul>
                         <li>Designed and implemented an automation testing tool to test a web application, which used
                             Selenium to interact with multiple browsers</li>
@@ -118,8 +119,8 @@
                     <p>Jan. 2017 - Apr. 2017</p>
                 </div>
                 <div class="column-wide">
-                    <p>Lead the front-end development for in-house safety inspection software.</p>
-                    <p>Key contributions:</p>
+                    <!-- <p>Lead the front-end development for in-house safety inspection software.</p> -->
+                    <!-- <p>Key contributions:</p> -->
                     <ul>
                         <li>Executed test cases for a regression testing phase prior to releasing a new branch of a web
                             application</li>
@@ -136,10 +137,10 @@
                     <p>May 2016 - Aug. 2016</p>
                 </div>
                 <div class="column-wide job-description">
-                    <p>Provides various front-end related services ranging from development work, consultations,
+                    <!-- <p>Provides various front-end related services ranging from development work, consultations,
                         speaking engagements, corporate training, workshops and online courses.</p>
-                    <p>See more at <a href="http://christinatruong.com">christinatruong.com</a>.</p>
-                    <p>Key contributions:</p>
+                    <p>See more at <a href="http://christinatruong.com">christinatruong.com</a>.</p> -->
+                    <!-- <p>Key contributions:</p> -->
                     <ul>
                         <li>Created ObjectMap files for automation test scripts to make it easier to maintain test
                             scripts when the application under test changes its object names</li>
@@ -164,8 +165,8 @@
                     <p>Winter 2018</p>
                 </div>
                 <div class="column-wide job-description">
-                    <p>Lead the front-end development for in-house safety inspection software.</p>
-                    <p>Key contributions:</p>
+                    <!-- <p>Lead the front-end development for in-house safety inspection software.</p> -->
+                    <!-- <p>Key contributions:</p> -->
                     <ul>
                         <li>Built a quiz application for android devices in Java using Android Studio</li>
                         <li>Implemented with intents and a model to share information between activities, including
@@ -206,15 +207,16 @@
 
 
                 <h3>Twitch</h3>
-                <h4>When I play games, I sometimes stream the games I play. Here are some of the gifs from the past</h4>
+                <!-- <h4>When I play games, I sometimes stream the games that I play. Here are some of the gifs from the
+                    past</h4> -->
                 <p>rocket league vid</p>
 
                 <h3>Overwatch</h3>
-                <h4>My career rank was 4000 (something)</h4>
-                <p>pic of me with winston background that moves while scrolling</p>
+                <!-- <h4>My career rank was 4000 (something)</h4> -->
+                <!-- <p>pic of me with winston background that moves while scrolling</p> -->
 
                 <h3>Fortnite</h3>
-                <h4>Average player</h4>
+                <!-- <h4>Average player</h4> -->
 
                 <h3>badminton</h3>
 
